fix: add univer-wrap-anywhere class (#6482)

--- a/packages/design/src/components/tree/index.css
+++ b/packages/design/src/components/tree/index.css
@@ -79,3 +79,7 @@
     justify-content: center;
     @apply univer-text-base;
 }
+
+.univer-wrap-anywhere {
+    overflow-wrap: anywhere;
+}
